fix: overflow hidden

--- a/styles/style.css
+++ b/styles/style.css
@@ -135,6 +135,7 @@
   html {
     font-size: 10px;
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }
   
   body {
@@ -144,8 +145,9 @@
     font-size: var(--fontSize-body-4);
     font-weight: var(--weight-regular);
     line-height: var(--lineHeight-5);
-    overflow: hidden ;
-    height: 300vh;
+    overflow-x: hidden;
+    position: relative;
+    min-height: 100vh;
   }
   
   body.loaded {
@@ -253,8 +255,9 @@
 
   main {
       position: relative;
+      overflow: hidden;
       z-index: 3;
-      padding-bottom: 3rem;
+      padding-bottom: 6rem;
   }
   
   /*-----------------------------------*\
